# steer_bot

./: .travis.rosinstall  .travis.yml  LICENSE.md  README.md  vcstool.repos
acky_bot_control/: CMakeLists.txt  package.xml
acky_bot_control/config/: control_ackermann_steering.yaml  control_steer_drive.yaml  gazebo_controller.yaml
acky_bot_control/launch/: control.launch
acky_bot_description/: CMakeLists.txt  package.xml
acky_bot_description/launch/: description.launch
acky_bot_description/urdf/: bicycle.urdf.xacro  inertials.xacro  materials.xacro  ursa_bot.urdf.xacro
acky_bot_description/urdf/bicycle_bot/: bicycle_bot.urdf.xacro
acky_bot_description/urdf/steer_bot/: steer_bot.urdf.xacro  wheel.xacro
acky_bot_description/urdf/ursa_bot/: ursa_bot.urdf.xacro
acky_bot_gazebo/: CMakeLists.txt  package.xml
acky_bot_gazebo/launch/: bicycle_bot_sim.launch  bicycle_sim.launch  robot_sim.launch  ursa_bot_sim.launch  ursa_sim.launch
acky_bot_viz/: CMakeLists.txt  package.xml
acky_bot_viz/launch/: view_model.launch  view_robot.launch  view_steer_bot_model.launch
acky_bot_viz/rviz/: model.rviz  robot.rviz
steer_bot_control/: CMakeLists.txt  package.xml
steer_bot_control/config/: control_steer_bot_hardware_gazebo.yaml  control_steer_bot_pids.yaml  ctrl_ackermann_steering_controller.yaml
steer_bot_control/config/bicycle_bot/: ctrl_ackermann_steering_controller.yaml  ctrl_joint_state.yaml
steer_bot_control/config/steer_bot/: ctrl_steer_drive_controller.yaml
steer_bot_control/launch/: control.launch
steer_bot_description/: CMakeLists.txt  package.xml
steer_bot_description/launch/: description.launch
steer_bot_description/urdf/: bicycle_bot.urdf.xacro  steer_bot.urdf.xacro  wheel.xacro
steer_bot_description/urdf/bicycle_bot/: bicycle_bot.urdf.xacro
steer_bot_description/urdf/common/: materials.xacro
steer_bot_description/urdf/steer_bot/: steer_bot.urdf.xacro  wheel.xacro
steer_bot_description/urdf/ursa_bot/: ursa_bot.urdf.xacro
steer_bot_gazebo/: CMakeLists.txt  package.xml
steer_bot_gazebo/launch/: bicycle_bot_sim.launch  steer_bot_sim.launch
steer_bot_viz/: CMakeLists.txt  package.xml
steer_bot_viz/launch/: view_bicycle_bot_model.launch  view_bicycle_bot_robot.launch  view_model.launch  view_robot.launch  view_steer_bot_model.launch  view_steer_bot_robot.launch
steer_bot_viz/rviz/: bicycle_bot_robot.rviz  model.rviz  robot.rviz  steer_bot_robot.rviz
ursa_bot_control/: CMakeLists.txt  package.xml
ursa_bot_control/config/: control_ackermann_drive.yaml  control_ackermann_steering.yaml  gazebo_controller.yaml
ursa_bot_control/launch/: control.launch
ursa_bot_description/: CMakeLists.txt  package.xml
ursa_bot_description/launch/: description.launch
ursa_bot_description/urdf/: bicycle.urdf.xacro  materials.xacro  ursa_bot.urdf.xacro
ursa_bot_gazebo/: CMakeLists.txt  package.xml
ursa_bot_gazebo/launch/: bicycle_sim.launch  robot_sim.launch  ursa_sim.launch
ursa_bot_viz/: CMakeLists.txt  package.xml
ursa_bot_viz/launch/: view_model.launch  view_robot.launch
ursa_bot_viz/rviz/: robot.rviz
