<?xml version="1.0"?>
<package format="2">
    <name>acky_bot_description</name>
    <version>0.0.0</version>
    <description>The acky_bot_description package</description>
    <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
    <license>BSD-3-Clause</license>
    <url type="website">https://github.com/srmainwaring/acky_bot</url>
    <url type="repository">https://github.com/srmainwaring/acky_bot</url>
    <url type="bugtracker">https://github.com/srmainwaring/acky_bot/issues</url>
    <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>urdf</depend>
    <depend>xacro</depend>
    <exec_depend>roslaunch</exec_depend>
</package>
