<?xml version="1.0"?>
<package format="2">
    <name>steer_bot_control</name>
    <version>0.0.0</version>
    <description>The steer_bot_control package</description>
    <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
    <license>BSD-3-Clause</license>
    <url type="website">https://github.com/srmainwaring/steer_bot</url>
    <url type="repository">https://github.com/srmainwaring/steer_bot</url>
    <url type="bugtracker">https://github.com/srmainwaring/steer_bot/issues</url>
    <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <exec_depend>ackermann_steering_controller</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>steer_bot_description</exec_depend>
    <exec_depend>steer_drive_controller</exec_depend>
</package>
