<?xml version="1.0"?>
<package format="2">
    <name>ursa_bot_control</name>
    <version>0.0.0</version>
    <description>The ursa_bot_control package</description>
    <maintainer email="rhys@todo.todo">rhys</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>

    <exec_depend>ackermann_drive_controller</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>curio_description</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>

</package>
