<?xml version="1.0"?>
<package format="2">
    <name>ursa_bot_description</name>
    <version>0.0.0</version>
    <description>The ursa_bot_description package</description>
    <maintainer email="rhys@todo.todo">rhys</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>urdf</depend>
    <depend>xacro</depend>
    <exec_depend>roslaunch</exec_depend>
</package>
