<?xml version="1.0"?>
<package format="2">
    <name>ursa_bot_gazebo</name>
    <version>0.0.0</version>
    <description>The ursa_bot_gazebo package</description>
    <maintainer email="rhys@todo.todo">rhys</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>ursa_bot_description</exec_depend>
    <exec_depend>ursa_bot_control</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rqt_robot_steering</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
    </export>

</package>
